--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+@(title: String)(content: Html)
 
 <html>
     <head>
         <title>Skills Checker</title>
     </head>
     <body>
-        <h1>Skills Checker</h1>
+        <h1>@title</h1>
+        @content
     </body>
 </html>
