--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -3,9 +3,32 @@
 <html>
     <head>
         <title>Skills Checker</title>
+        <!-- Include the bootstrap stylesheets -->
+        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"> 
     </head>
     <body>
-        <h1>@title</h1>
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <h3 class="pull-left" style="color: #F3E2F6;">@title</h3>
+
+                <div class="nav">
+                        <ul class="nav nav-tabs pull-right">
+                            <li class="active"><a href="#">Test</a></li>
+                            <li><a href="/crud/questions/save/">Add question</a></li>
+                            <li><a href="#contact">About</a></li>
+                        </ul>
+                    </div> 
+            </div>
+        </nav> 
+
         @content
+        
+        <center>
+            <a href="#">Skills Checker 2014(c)</a>
+        </center>
+        <script src="http:/code.jquery.com/jquery-1.7.2.min.js"></script>
+        <!-- Optional: Incorporate the Bootstrap JavaScript plugins -->
+        <script src="http:/netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     </body>
 </html>
+
