--- a/app/views/addform.scala.html
+++ b/app/views/addform.scala.html
@@ -12,26 +12,42 @@
 
 	<h2>Add new question:</h2>
 
-	@helper.form(action = routes.Questions.save(), 'class ->"form-horizontal") {
+	@helper.form(action = routes.Questions.save(), 'role ->"form", 'class -> "form-horizontal col-xs-12") {
+	<div class="form-group col-xs-10">
 		@helper.textarea(questionForm("questionText"),
 									  '_label -> "Question",
 									  'rows -> 3, 
-        							  'class -> "input-xxxlarge",
+        							  'class -> "input-xxxlarge form-control",
         							  'placeholder -> "Enter question"
     	)
+    </div>
+    <div class="form-group col-xs-10">
+    	<div class="row">
+    	<div class="col-xs-3">
     	@helper.inputText(choicesForm("rightChoice"),
     								  '_label -> "Right choice",
-    								  'size -> 30,
-    						  		  'placeholder -> "Enter choice")
-    	@helper.repeat(choicesForm("wrongChoice"), min = 3) { Field =>
+    								  'class -> "form-control col-xs-3",
+    						  		  'placeholder -> "Enter choice"
+    	)
+    	</div>
+    	@helper.repeat(choicesForm("wrongChoice"), min = 3) { Field =>	
+    		<div class="col-xs-3">
     		@helper.inputText(Field,
     						  '_label -> "Wrong choice",
-    						  'size -> 30,
-    						  'placeholder -> "Enter choice")
+    						  'class -> "form-control col-xs-3",
+    						  'placeholder -> "Enter choice"
+    		) 	
+    	</div>
 		}
 
-		<input type="submit" class="btn btn-primary" value="Submit">
+		</div>
+		<input type="submit" class="btn btn-primary" style="margin: 10px" value="Submit">
+
+	</div>
+
 	}	
+
+
 	@questions(questionList)
 </div>
 
