--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,21 +8,22 @@
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+
             <div class="container">
                 <h3 class="pull-left" style="color: #F3E2F6;">@title</h3>
 
                 <div class="nav">
                         <ul class="nav nav-tabs pull-right">
-                            <li class="active"><a href="#">Test</a></li>
+                            <li><a href="#">Test</a></li>
                             <li><a href="/crud/questions/save/">Add question</a></li>
                             <li><a href="#contact">About</a></li>
                         </ul>
-                    </div> 
+                </div> 
             </div>
         </nav> 
-
-        @content
-        
+        <div style="margin-top: 60px">
+            @content
+        </div>
         <center>
             <a href="#">Skills Checker 2014(c)</a>
         </center>
