Add interface for answering questions

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,10 +1,11 @@
+@(content: Html)
 <!DOCTYPE html>
-
-<html>
+    <html>
     <head>
         <title>Skills Checker</title>
     </head>
     <body>
         <h1>Skills Checker</h1>
+        @content
     </body>
 </html>
