--- a/app/views/core/one.scala.html
+++ b/app/views/core/one.scala.html
@@ -1,5 +1,5 @@
 @(qto: to.QuestionTO, uto: to.UserTO, ctolist: List[to.ChoiceTO])
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
     <head>
         <title>@Messages("Demo One")</title>
@@ -43,7 +43,8 @@
             }
         </style>
     </head>
-    <body>
+    <body> -->
+        @main("Test") {
         <div class="main">
             <form name="input" action="/questions" method="POST" >
                 User: <input type="text" name="fullname" value="@{uto.fullname}">
@@ -58,5 +59,47 @@
                 <button class="button-xlarge pure-button">Check answer</button>
             </form>
         </div>
+
+            <style>
+            div {
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 0 auto;
+            margin-left: auto; margin-right: auto;
+            max-width:720px
+            }
+            .main {
+            margin: 0 auto;
+            margin-left: auto; margin-right: auto;
+            line-height: 225%;
+            }
+            p.sansserif {
+            font-family: Arial, Helvetica, sans-serif;
+            }
+            h1, h2, h3 {
+            font-family: Helvetica, Arial, sans-serif;
+            margin-bottom: 1px;
+            }
+            .red {
+            color:red;
+            }
+            .green {
+            color:green;
+            }
+            label {
+            cursor: pointer;
+            font-size: 150%;
+            vertical-align: top;
+            }
+            </style>
+            <style scoped>
+            .button-xlarge {
+            font-size: 150%;
+            width: 360px;
+            }
+            </style>
+
+        }
+     <!--
     </body>
 </html>
+    -->
