--- a/app/views/addform.scala.html
+++ b/app/views/addform.scala.html
@@ -24,6 +24,13 @@
         								  'placeholder -> "Enter question"
    		 	)
     	</div>
+        <div class="form-group">
+            @inputRadioGroup(
+                questionForm("level"),
+                options = options("1" -> "1", "2" -> "2", "3" -> "3"),
+                '_label -> "Level"
+            )
+        </div>
     	<div class="form-group">
     		<div class="row">
     			<div class="col-xs-3">
