Add Topic into crud

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,7 +17,9 @@
                         <ul class="nav nav-tabs pull-right">
                             <li><a href="/questions">Test</a></li>
                             <li><a href="/crud/questions/">Add question</a></li>
-                            <li><a href="#contact">About</a></li>
+                            <li><a href="/crud/rules/">Add rule</a></li>
+                            <li><a href="/crud/topics/">Add topic</a></li>
+                            <li><a href="#about">About</a></li>
                         </ul>
                 </div> 
             </div>
