Rename 'user' to 'account', add Procfile

--- a/app/views/core/one.scala.html
+++ b/app/views/core/one.scala.html
@@ -1,4 +1,4 @@
-@(qto: to.QuestionTO, uto: to.UserTO, ctolist: List[to.ChoiceTO])
+@(qto: to.QuestionTO, uto: to.AccountTO, ctolist: List[to.ChoiceTO])
 
 @main("Test") {
     <div class="main">
