--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,9 +4,9 @@
     <head>
         <title>Skills Checker</title>
         <!-- Include the bootstrap stylesheets -->
-        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
     </head>
-    <body style="height: 100%; margin: 0; padding: 0">
+    <body style="height: 100%; margin: 0; padding: 0" class="container">
         <div class="wrapper" style="min-height:100%; position:relative;">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 
@@ -47,7 +47,7 @@
         </div>
         <script src="http:/code.jquery.com/jquery-1.7.2.min.js"></script>
         <!-- Optional: Incorporate the Bootstrap JavaScript plugins -->
-        <script src="http:/netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+        <script src="@routes.Assets.at("stylesheets/bootstrap.min.js")"></script>
     </body>
 </html>
 
