--- a/app/views/addrules.scala.html
+++ b/app/views/addrules.scala.html
@@ -4,7 +4,7 @@
 @import helper.twitterBootstrap._
 
 <!-- Include the bootstrap stylesheets -->
-<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
 
 @main("Rule form") {
 
@@ -45,5 +45,5 @@
 
 	<script src="http:/code.jquery.com/jquery-1.7.2.min.js"></script>
    	<!-- Optional: Incorporate the Bootstrap JavaScript plugins -->
-    <script src="http:/netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="@routes.Assets.at("stylesheets/bootstrap.min.js")"></script>
 }
