--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,14 +4,7 @@
 <head>
     <title>Skills Checker</title>
     <!-- Include the bootstrap stylesheets -->
-    <link href="http://djkpi.com.ua/pr/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-        body {
-            padding-top: 60px;
-            padding-bottom: 40px;
-        }
-    </style>
-    <link href="/wp-content/themes/clear-theme/styles/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
