--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -34,7 +34,7 @@
         </footer>
             <script src="http:/code.jquery.com/jquery-1.7.2.min.js"></script>
             <!-- Optional: Incorporate the Bootstrap JavaScript plugins -->
-            <script src="http://djkpi.com.ua/pr/js/bootstrap.min.js"></script>
+            <script src="@routes.Assets.at("js/bootstrap.min.js")"></script>
 </body>
 </html>
 
