--- a/app/views/addquestions.scala.html
+++ b/app/views/addquestions.scala.html
@@ -5,7 +5,7 @@
 @import helper.twitterBootstrap._
 
 <!-- Include the bootstrap stylesheets -->
-<link href="http://djkpi.com.ua/pr/css/bootstrap.css" rel="stylesheet">
+<link href="http://circus2014.com.ua/projectx/css/bootstrap.css" rel="stylesheet">
 
 @main("Question form") {
 
@@ -76,9 +76,10 @@
 	<div class="col-xs-2"></div>
 	</div>
 	</div>
+
 </div>
 
 	<script src="http:/code.jquery.com/jquery-1.7.2.min.js"></script>
    	<!-- Optional: Incorporate the Bootstrap JavaScript plugins -->
-    <script src="http://djkpi.com.ua/pr/js/bootstrap.min.js"></script>
+    <script src="http://circus2014.com.ua/projectx/js/bootstrap.js"></script>
 }
