--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,37 +4,71 @@
 <head>
     <title>Skills Checker</title>
     <!-- Include the bootstrap stylesheets -->
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <!-- Optional: Incorporate the Bootstrap JavaScript plugins -->
+    <script type="text/javascript" src="http://bootstrap-ru.com/203/assets/js/bootstrap-modal.js"></script>
+    <script type="text/javascript" src="http://circus2014.com.ua/projectx/js/bootstrap.js"></script>
+    <script type="text/javascript">
+        $("document").ready(function(){
+            $('#modal').modal();
+        });
+    </script>
+    <link href="http://circus2014.com.ua/projectx/css/bootstrap.css" rel="stylesheet">
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<body><div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 
         <div class="container">
-            <h3 class="pull-left" style="padding:0 0 0 20px;">@title</h3>
+
 
             <div class="nav">
                 <ul class="nav nav-tabs pull-right">
-                    <li><a href="/questions">Test</a></li>
-                    <li><a href="/crud/questions/">Add question</a></li>
-                    <li><a href="/crud/rules/">Add rule</a></li>
-                    <li><a href="/crud/topics/">Add topic</a></li>
-                    <li><a href="#about">About</a></li>
+
+                    <li><a href="/home/">HOME</a></li>
+                    <li><a href="/questions">TEST</a></li>
+                    <li><a href="/crud/questions/">ADD QUESTION</a></li>
+                    <li><a href="/crud/rules/">ADD RULE</a></li>
+                    <li><a href="/crud/topics/">ADD TOPIC</a></li>
+                    <li><a href="/about/">ABOUT</a></li>
+                    <li><a href="/login/">LOG IN</a></li>
+
+
                 </ul>
             </div>
         </div>
     </div>
-    <div style="margin-top: 60px">
+
+<div class="Jumbotron">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-1"></div>
+            <div class="col-xs-10">
         @content
+            </div>
+
+            <div class="col-xs-1"></div>
+        </div> </div></div>
+
+<div id="myModal" class="modal hide fade">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal">×</button>
+        <h3>Заголовок</h3>
     </div>
+    <div class="modal-body">
+        <p>Текст…</p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn">Закрыть</a>
+        <a href="#" class="btn btn-primary">Сохранить</a>
+    </div>
+</div>
 
     <footer>
         <div class="center">
             <a href="#">Skills Checker 2014(c)</a>
         </div>
         </footer>
-            <script src="http:/code.jquery.com/jquery-1.7.2.min.js"></script>
-            <!-- Optional: Incorporate the Bootstrap JavaScript plugins -->
-            <script src="@routes.Assets.at("js/bootstrap.min.js")"></script>
+
+
 </body>
 </html>
 
