--- a/app/views/core/one.scala.html
+++ b/app/views/core/one.scala.html
@@ -3,7 +3,7 @@
 @main("Test") {
     <div class="main">
         <form name="input" action="/questions" method="POST" >
-            User: <input type="text" name="fullname" value="@{uto.fullname}">
+            <!--User: <input type="text" name="fullname" value="@@{uto.fullname}"> -->
             <h2> @qto.text </h2>
             <div style="padding-left: 40px; padding-bottom: 10px;">
                 @for(choice <- ctolist) {
