--- a/app/views/home.scala.html
+++ b/app/views/home.scala.html
@@ -1,13 +1,13 @@
 @import helper._
 
 @main("Home") {
-<div class="container">
-    <h1>Skills checker</h1>
+<div class="container"></div>
+
+   </br></br></br></br></br></br></br>
     <div class="row">
-        <div class="col-xs-4">
-        </div>
-        <div class="col-xs-8">
-        </div>
+        <div class="col-xs-5"></div>
+        <div class="col-xs-2"><a href="/questions"><img src="http://circus2014.com.ua/projectx/logo2.png"></a></div>
+        <div class="col-xs-5"></div>
     </div>
 </div>
 
