--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,18 +18,18 @@
 <body><div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 
         <div class="container">
-
+            <a class="navbar-brand" href="/home/"><img src="http://circus2014.com.ua/projectx/logo1.png"></a>
 
             <div class="nav">
                 <ul class="nav nav-tabs pull-right">
 
                     <li><a href="/home/">HOME</a></li>
-                    <li><a href="/questions">TEST</a></li>
+
                     <li><a href="/crud/questions/">ADD QUESTION</a></li>
                     <li><a href="/crud/rules/">ADD RULE</a></li>
                     <li><a href="/crud/topics/">ADD TOPIC</a></li>
                     <li><a href="/about/">ABOUT</a></li>
-                    <li><a href="/login/">LOG IN</a></li>
+                    <li><a href="/login">LOG IN</a></li>
 
 
                 </ul>
@@ -62,11 +62,7 @@
     </div>
 </div>
 
-    <footer>
-        <div class="center">
-            <a href="#">Skills Checker 2014(c)</a>
-        </div>
-        </footer>
+
 
 
 </body>
