--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -2,8 +2,8 @@
 
 @main("About") {
 	<div class="container">
-		<h1>Skills checker</h1>
-		<div class="row">
+		Choice – адаптивное тестирование Ваших знаний английского языка. Адаптивность теста заключается в том, что система использует механизм коллаборативной фильтрации, который подбирает задания для теста таким образом, чтобы проверка проходила более эффективно. Сложность теста растет в зависимости от Ваших ответов. Все вопросы делятся на темы, темы подразбиваются на правила, поэтому легко понять, какие именно области Вам необходимо "подтянуть".
+				<div class="row">
 			<div class="col-xs-4">
 			</div>
 			<div class="col-xs-8">
