--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -1,14 +1,52 @@
 @import helper._
 
 @main("About") {
-	<div class="container">
-		Choice – адаптивное тестирование Ваших знаний английского языка. Адаптивность теста заключается в том, что система использует механизм коллаборативной фильтрации, который подбирает задания для теста таким образом, чтобы проверка проходила более эффективно. Сложность теста растет в зависимости от Ваших ответов. Все вопросы делятся на темы, темы подразбиваются на правила, поэтому легко понять, какие именно области Вам необходимо "подтянуть".
-				<div class="row">
-			<div class="col-xs-4">
-			</div>
-			<div class="col-xs-8">
-			</div>
-		</div>
-	</div>
 
+<style type="text/css">
+	ab {
+		/*font-family: HelveticaNeneCyr-light;
+		 src: url(http://circus2014.com.ua/projectx/fonts/HelveticaNeueCyr-Light.otf)*/
+		font-family: 'Open Sans Condensed', sans-serif;
+		font-size: 12pt; /* Размер текста */
+
+	}
+</style>
+<div class="row">
+	<ab> <p style="text-align: justify" >
+		Choice – адаптивное тестирование Ваших знаний английского языка.
+		Адаптивность теста заключается в том, что система использует механизм коллаборативной фильтрации, который подбирает задания для теста таким образом, чтобы проверка проходила более эффективно.
+		Сложность теста растет в зависимости от Ваших ответов.
+		Все вопросы делятся на темы, темы подразбиваются на правила, поэтому легко понять, какие именно области Вам необходимо "подтянуть".
+	</br></br>Инструменты, использованные при разработке приложения:
+	</p>
+	</ab>
+</div>
+		<div class="row">
+			<div class="col-xs-2">
+				<img src="http://circus2014.com.ua/projectx/logo/java.png"> </div>
+					<div class="col-xs-2"><img src="http://circus2014.com.ua/projectx/logo/play.png">
+						</div><div class="col-xs-2"><img src="http://circus2014.com.ua/projectx/logo/hiber.png">
+							</div>
+
+
+	<div class="col-xs-2"><img src="http://circus2014.com.ua/projectx/logo/git.png">
+	</div>
+	<div class="col-xs-2"><img src="http://circus2014.com.ua/projectx/logo/heroku.png">
+	</div><div class="col-xs-2"><img src="http://circus2014.com.ua/projectx/logo/msql.png">
+</div></div>
+		</br>
+<div class="row">
+	<div class="col-xs-2"><img src="http://circus2014.com.ua/projectx/logo/css.png">
+	</div>
+	<div class="col-xs-2"><img src="http://circus2014.com.ua/projectx/logo/js.png">
+	</div><div class="col-xs-2"><img src="http://circus2014.com.ua/projectx/logo/bootstrap.png">
+	</div>
+	<div class="col-xs-2"><img src="http://circus2014.com.ua/projectx/logo/github.png">
+	</div>
+	<div class="col-xs-2"><img src="http://circus2014.com.ua/projectx/logo/html.png">
+	</div>
+	<div class="col-xs-2"><img src="http://circus2014.com.ua/projectx/logo/postgre.png"> </div>
+
+</div>
+</div>
 }
