--- a/app/views/core/one.scala.html
+++ b/app/views/core/one.scala.html
@@ -1,14 +1,23 @@
 @(qto: to.QuestionTO, uto: to.UserTO, ctolist: List[to.ChoiceTO])
 
 @main("Test") {
+<style type="text/css">
+    ab {
+        /*font-family: HelveticaNeneCyr-light;
+         src: url(http://circus2014.com.ua/projectx/fonts/HelveticaNeueCyr-Light.otf)*/
+        font-size: 12pt; /* Размер текста */
+        font-family: 'Open Sans Condensed', sans-serif;
+        text-align: center;
+    }
+</style>
     <div class="row">
-        <div class="col-xs-5"></div>
-        <div class="col-xs-2">
+        <div class="col-xs-2"></div>
+        <div class="col-xs-8">
 
 
 
 <form name="input" action="/questions" method="POST" >
-            <h2> @qto.text </h2>
+        <ab>    <h2> @qto.text </h2>
             <div style="padding-left: 40px; padding-bottom: 10px;">
                 @for(choice <- ctolist) {
                     <label><input type="radio" name="answer" value="@{choice.id}" required>  @choice.text  </label>
@@ -16,12 +25,12 @@
                 }
             </div>
             <input type="hidden" name="questionId" value="@qto.id">
-            <button class="button-xlarge pure-button" id="setButton">Check answer</button>
-        </form>
+            <button class="btn btn-block" id="setButton">Check answer</button>
+        </ab></form>
     </div>
 
 
-<div class="col-xs-5"></div>
+<div class="col-xs-2"></div>
 </div>
 
 
