--- a/app/views/addtopics.scala.html
+++ b/app/views/addtopics.scala.html
@@ -6,9 +6,17 @@
 <link href="http://circus2014.com.ua/projectx/css/bootstrap.css" rel="stylesheet">
 
 @main("Topic form") {
+<style type="text/css">
+	ab {
+		/*font-family: HelveticaNeneCyr-light;
+		 src: url(http://circus2014.com.ua/projectx/fonts/HelveticaNeueCyr-Light.otf)*/
+		font-family: 'Open Sans Condensed', sans-serif;
+		font-size: 12pt; /* Размер текста */
 
+	}
+</style>
 <div class="container">
-
+<ab>
 	<div class="row">
 
     <div class="col-xs-2"></div>
@@ -24,7 +32,7 @@
     	</div>
         
 		
-		<input type="submit" class="btn btn-primary" style="margin: 10px" value="Submit">
+		<Button type="submit" class="btn btn-block" style="margin: 10px" >Submit</Button>
 	
 	}	
 
@@ -33,6 +41,7 @@
 	<div class="col-xs-2"></div>
 	</div>
 	</div>
+</ab>
 </div>
 
 	<script src="http:/code.jquery.com/jquery-1.7.2.min.js"></script>
