--- a/app/views/addquestions.scala.html
+++ b/app/views/addquestions.scala.html
@@ -5,12 +5,21 @@
 @import helper.twitterBootstrap._
 
 <!-- Include the bootstrap stylesheets -->
-<link href="http://circus2014.com.ua/projectx/css/bootstrap.css" rel="stylesheet">
 
 @main("Question form") {
 
-<div class="container">
+<style type="text/css">
+	ab {
+		/*font-family: HelveticaNeneCyr-light;
+		 src: url(http://circus2014.com.ua/projectx/fonts/HelveticaNeueCyr-Light.otf)*/
+		font-family: 'Open Sans Condensed', sans-serif;
+		font-size: 12pt; /* Размер текста */
 
+	}
+</style>
+
+<div class="container">
+<ab>
 	<div class="row">
 
 	<div class="col-xs-2"></div>
@@ -65,9 +74,9 @@
 				}
 	
 			</div>
-		
-			<input type="submit" class="btn btn-primary" style="margin: 10px" value="Submit">
-	
+	<div class="row">
+			<button type="submit" class="btn btn-block" style="margin: 10px" >Submit</button>
+	</div>
 		</div>
 	}	
 
@@ -76,7 +85,7 @@
 	<div class="col-xs-2"></div>
 	</div>
 	</div>
-
+</ab>
 </div>
 
 	<script src="http:/code.jquery.com/jquery-1.7.2.min.js"></script>
