Revert "Change main view"
This reverts commit 18a309080c54742a26a84e7aa3d8ab9a8fd85a66.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,7 +6,7 @@
         <!-- Include the bootstrap stylesheets -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
     </head>
-    <body style="height: 100%; margin: 0; padding: 0">
+    <body style="height: 100%; margin: 0; padding: 0" class="container">
         <div class="wrapper" style="min-height:100%; position:relative;">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 
