--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,8 +15,18 @@
     </script>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link href="http://circus2014.com.ua/projectx/css/bootstrap.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
+
     <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-   
+    <style type="text/css">
+        anav {
+            /*font-family: HelveticaNeneCyr-light;
+             src: url(http://circus2014.com.ua/projectx/fonts/HelveticaNeueCyr-Light.otf)*/
+            font-family: 'Anton', sans-serif;
+            font-size: 13pt; /* Размер текста */
+
+        }
+    </style>
 </head>
 <body><div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 
@@ -26,13 +36,12 @@
             <div class="nav">
                 <ul class="nav nav-tabs pull-right">
 
-                    <li><a href="/home/">HOME</a></li>
-
-                    <li><a href="/crud/questions/">ADD QUESTION</a></li>
-                    <li><a href="/crud/rules/">ADD RULE</a></li>
-                    <li><a href="/crud/topics/">ADD TOPIC</a></li>
-                    <li><a href="/about/">ABOUT</a></li>
-                    <li><a href="/login">LOG IN</a></li>
+                    <li><a href="/home/"><anav>HOME</anav></a></li>
+                    <li><a href="/crud/questions/"><anav>ADD QUESTION</anav></a></li>
+                    <li><a href="/crud/rules/"><anav>ADD RULE</anav></a></li>
+                    <li><a href="/crud/topics/"><anav>ADD TOPIC</anav></a></li>
+                    <li><a href="/about/"><anav>ABOUT</anav></a></li>
+                    <li><a href="/login"><anav>LOG IN</anav></a></li>
 
 
                 </ul>
